- Added Full Support for the AdvancedDataPlane feature - Added RampClassLoader to load at runtime .class and jar files - Added ComponentLocator to retrieve at runtime RAMP components in a decoupled way. - For the SDN feature now trafficEngineeringPolicy is orthogonal to the routingPolicy - Add new method in UDPDispatcher addForwardingListenerBeforeAnother - Bug Fix for the application SDNControllerClient/Service